# agora_rtc_sdk_c

./: .gitignore  CMakeLists.txt  README.md
cmake/: AgoraRtcSdk.cmake
include/: C_AgoraBase.h  C_AgoraMediaBase.h  C_AgoraOptional.h  C_AgoraRefPtr.h  C_IAgoraLog.h  C_IAgoraParameter.h  C_IAgoraService.h  C_NGIAgoraAudioTrack.h  C_NGIAgoraLocalUser.h  C_NGIAgoraMediaNode.h  C_NGIAgoraRtcConnection.h  C_NGIAgoraVideoTrack.h
include/bridge/: AudioFrameObserverBridge.hh  C_AudioFrameObserverBridge.h  C_LocalUserObserverBridge.h  C_RtcConnectionObserverBridge.h  LocalUserObserverBridge.hh  RtcConnectionObserverBridge.hh
src/: C_AgoraBase.cpp  C_AgoraMediaBase.cpp  C_AgoraRefPtr.cpp  C_IAgoraLog.cpp  C_IAgoraParameter.cpp  C_IAgoraService.cpp  C_NGIAgoraAudioTrack.cpp  C_NGIAgoraLocalUser.cpp  C_NGIAgoraMediaNode.cpp  C_NGIAgoraRtcConnection.cpp
src/bridge/: AudioFrameObserverBridge.cpp  C_AudioFrameObserverBridge.cpp  C_LocalUserObserverBridge.cpp  C_RtcConnectionObserverBridge.cpp  LocalUserObserverBridge.cpp  RtcConnectionObserverBridge.cpp
